--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,19 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+
+const me = {
+  name: "Ramón Huidobro",
+	githubUsername: "hola-soy-milk"
+};
+
+const gh = await fetch(`https://api.github.com/users/${me.githubUsername}`)
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+		<p>{JSON.stringify(gh)}</p>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
