--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,48 +7,37 @@ const me = {
   githubUsername: "hola-soy-milk",
 };
 
-console.log(import.meta.env.GH_TOKEN);
+const repoParams = {
+  sort: "created",
+  direction: "descending",
+};
 
 const response = await fetch(
-  `https://api.github.com/users/${me.githubUsername}/repos`,
+  `https://api.github.com/users/${
+    me.githubUsername
+  }/repos?${new URLSearchParams(repoParams).toString()}`,
   {
     headers: { Authentication: `token ${import.meta.env.GH_TOKEN}` },
   }
 );
-const gh = await response.json();
-console.log(gh);
+const repos: [{ name: string; description: string; html_url: string }] =
+  await response.json();
 ---
 
 <Layout title="Welcome to Astro.">
   <main>
     <h1>Welcome to <span class="text-gradient">Astro</span></h1>
-    <p>{JSON.stringify(gh)}</p>
     <p class="instructions">
       To get started, open the directory <code>src/pages</code> in your project.<br
       />
       <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
     </p>
     <ul role="list" class="link-card-grid">
-      <Card
-        href="https://docs.astro.build/"
-        title="Documentation"
-        body="Learn how Astro works and explore the official API docs."
-      />
-      <Card
-        href="https://astro.build/integrations/"
-        title="Integrations"
-        body="Supercharge your project with new frameworks and libraries."
-      />
-      <Card
-        href="https://astro.build/themes/"
-        title="Themes"
-        body="Explore a galaxy of community-built starter themes."
-      />
-      <Card
-        href="https://astro.build/chat/"
-        title="Community"
-        body="Come say hi to our amazing Discord community. ❤️"
-      />
+      {
+        repos.map(({ name, description, html_url }) => (
+          <Card href={html_url} title={name} body={description} />
+        ))
+      }
     </ul>
   </main>
 </Layout>
