--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
+import Greeting from "../components/Greeting.jsx";
 import ramonImg from "../assets/ramon.jpg";
 const talks = await getCollection("talks");
 
@@ -27,7 +28,7 @@ const repos: [{ name: string; description: string; html_url: string }] =
 
 <Layout title="Welcome to Astro.">
   <main>
-    <h1>Welcome to <span class="text-gradient">Astro</span></h1>
+    <Greeting client:load messages={["Hej", "Buenas", "Hola", "Yo"]} />
     <Image src={ramonImg} height={300} width={300} alt="Picture of me" />
     <p class="instructions">
       To get started, open the directory <code>src/pages</code> in your project.<br
