--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Card from '../components/Card.astro';
 import { getCollection } from 'astro:content';
 import { Image } from 'astro:assets';
 import ogs from 'open-graph-scraper';
-import Greeting from '../components/Greeting.jsx';
+import Greeting from '../components/RandomVideo.jsx';
 import ramonImg from '../assets/ramon.jpg';
 const talks = await getCollection('talks');
 
