--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import { getCollection } from 'astro:content';
-import { Image } from 'astro:assets';
-import ogs from 'open-graph-scraper';
-import RandomVideo from '../components/RandomVideo.jsx';
-import ramonImg from '../assets/ramon.jpg';
-const talks = await getCollection('talks');
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import { getCollection } from "astro:content";
+import { Image } from "astro:assets";
+import ogs from "open-graph-scraper";
+import RandomTalk from "../components/RandomTalk.jsx";
+import ramonImg from "../assets/ramon.jpg";
+const talks = await getCollection("talks");
 
 const me = {
   name: "Ramón Huidobro",
@@ -19,19 +19,23 @@ const repoParams = {
 };
 
 type OGImage = {
-  height: string;
+  height?: number;
+  width?: number;
   type: string;
   url: string;
-  width: string;
 };
 
 const response = await fetch(
   `https://api.github.com/users/${
     me.githubUsername
-  }/repos?${new URLSearchParams(repoParams).toString()}`
+  }/repos?${new URLSearchParams(repoParams).toString()}`,
+  {
+    headers: { Authentication: `token ${import.meta.env.GH_TOKEN}` },
+  }
 );
 const repos: [{ name: string; description: string; html_url: string }] =
   await response.json();
+console.log(repos);
 
 const reposWithImages: {
   name: string;
@@ -50,25 +54,13 @@ const reposWithImages: {
 
 <Layout title="Welcome to Astro.">
   <main>
-    <RandomVideo client:load talks={talks} />
+    <RandomTalk client:load talks={talks} />
     <Image src={ramonImg} height={300} width={300} alt="Picture of me" />
     <p class="instructions">
       To get started, open the directory <code>src/pages</code> in your project.<br
       />
       <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
     </p>
-    <h2>Talks</h2>
-    <ul role="list" class="link-card-grid">
-      {
-        talks.map(({ slug, data: { title, event, year } }) => (
-          <Card
-            href={`talks/${slug}`}
-            title={title}
-            body={`${event}, ${year}`}
-          />
-        ))
-      }
-    </ul>
     <h2>Projects on GitHub</h2>
     <ul role="list" class="link-card-grid">
       {
