Tweaked GitHub project styling

--- a/src/components/GitHubProject.astro
+++ b/src/components/GitHubProject.astro
@@ -23,6 +23,15 @@ const {
     max-width: 100%;
     height: auto;
     vertical-align: middle;
-    border-radius: 5px;
+    border-radius: 10px;
+  }
+  a {
+    border-radius: 10px;
+  }
+  a:hover {
+    background: var(--accent-gradient);
+  }
+  img:hover {
+    opacity: 0.5
   }
 </style>
