--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
       45deg,
       rgb(var(--accent)),
       #da62c4 30%,
-      white 60%
+      #FF6EBF 60%
     );
   }
   html {
