--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,42 +3,19 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
-import ogs from "open-graph-scraper";
 import RandomTalk from "../components/RandomTalk.jsx";
 import meImg from "../assets/ramon.jpg";
 import GitHubProject from "../components/GitHubProject.astro";
 import Repo from "../types/Repo";
+import { queryReposForUser } from "../utils/GitHubRepos"
 const talks = await getCollection("talks");
 
 const me = {
   name: "Ramón Huidobro",
-  githubUsername: "hola-soy-milk",
+  gitHubUsername: "hola-soy-milk",
 };
 
-const repoParams = {
-  sort: "created",
-  direction: "descending",
-};
-
-const response = await fetch(
-  `https://api.github.com/users/${
-    me.githubUsername
-  }/repos?${new URLSearchParams(repoParams).toString()}`,
-  {
-    headers: { Authentication: `token ${import.meta.env.GH_TOKEN}` },
-  }
-);
-const repos: [{ name: string; description: string; html_url: string }] =
-  await response.json();
-
-const reposWithImages: Repo[] = await Promise.all(
-  repos.map(
-    async (repo: { name: string; description: string; html_url: string }) => {
-      const { result } = await ogs({ url: repo.html_url });
-      return { ...repo, ogImage: result.ogImage[0] };
-    }
-  )
-);
+const reposWithImages = await queryReposForUser(me.gitHubUsername);
 ---
 
 <Layout title={`${me.name}: Speaker and Open Source Developer`}>
